Fix experience statement spacing

--- a/src/index.css
+++ b/src/index.css
@@ -31,8 +31,8 @@ a {
 
 .icon {
   color: rgb(137, 137, 137);
-  width: 80px;
-  height: 80px;
+  width: 70px;
+  height: 70px;
 }
 
 /* a .icon:hover {
